# OmniShell

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
examples/launcher/: index.html
lib/: omni-bridge.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
